--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -13,19 +13,29 @@
         @{
             //TODO #2: Complete the View Jobs By Category Table
         }
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
-        @foreach (var category in ViewBag.tableChoices)
-        {
-            <td>
-                <ul>
-                    @foreach (var item in category.Value)
-                    {
-                        <li>
-                            <a asp-controller="List" asp-action="Jobs" asp-route-column="@category.Key" asp-route-value="@item">@item</a>
-                        </li>
-                    }
-                </ul>
-            </td>
-        }
-    </tr>
+
+    <td>
+        <ul>
+            <li>
+                <a href="/List/Jobs?column=all&value=all">All</a>
+            </li>
+        </ul>
+    </td>
+
+    @* Feel free to remove or modify this element if necessary. *@
+  
+    @foreach (var category in ViewBag.tableChoices)
+    {
+    <td>
+        <ul>
+            @foreach (var item in category.Value)
+            {
+            <li>
+                <a asp-controller="List" asp-action="Jobs" asp-route-column="@category.Key" asp-route-value="@item">@item</a>
+            </li>
+            }
+        </ul>
+    </td>
+    }
+  
 </table>
