--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -30,4 +30,37 @@
         //TODO #4: Loop over the search results to display all job fields.
     }
 
+    @if(ViewBag.columns.Equals("all"))
+    {
+    <table class="job-listing">
+        @foreach (var job in ViewBag.jobs)
+        {
+        <tr>
+            <th>ID: </th>
+            <td>@job.Id</td>
+        </tr>
+        <tr>
+            <th>Name: </th>
+            <td>@job.Name</td>
+        </tr>
+        <tr>
+            <th>Employer: </th>
+            <td>@job.Employer.Value</td>
+        </tr>
+        <tr>
+            <th>Location: </th>
+            <td>@job.Location.Value</td>
+        </tr>
+        <tr>
+            <th>Position Type: </th>
+            <td>@job.PositionType.Value</td>
+        </tr>
+        <tr>
+            <th>Skill: </th>
+            <td>@job.CoreCompetency.Value</td>
+        </tr>  
+        <tr><th></th><td></td></tr>
+        }
+    </table>
+    }
 </div>
